--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             </div>
           </div>
         </div>
+        <a class="about-arrow" href="#services"><i class="ion-arrow-down-c"></i></a>
       </div>
     </section>
     <!-- end about -->
@@ -136,6 +137,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
+        <a class="services-arrow" href="#portfolio"><i class="ion-arrow-down-c"></i></a>
       </div>
     </section>
     <!-- end sevices -->
@@ -153,7 +155,7 @@
                             <ul class="portfolio_filter">
                                 <li><a href="" class="active" data-filter="*">All</a></li>
                                 <li><a href="" data-filter=".branding">Branding</a></li>
-                                <li><a href="" data-filter=".design">Design</a></li>
+                                <li><a href="" data-filter=".design">Web Design</a></li>
                                 <li><a href="" data-filter=".development">Development</a></li>
                                 <li><a href="" data-filter=".logo">Logos</a></li>
                             </ul>
@@ -164,30 +166,14 @@
                     <!-- portfolio_container -->
                     <div class="no-padding portfolio_container clearfix">
                         <!-- single work -->
-                        <div class="col-md-4 col-sm-6 branding logo">
+                        <div class="col-md-4 col-sm-6 development logo design">
                             <a href="single-project.html" class="portfolio_item">
-                                <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                                <img src="images/blog.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
                                         <div class="item_info">
                                             <span>Blog</span>
-                                            <em>Web Development / Design</em>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <!-- end single work -->
-
-                        <!-- single work -->
-                        <div class="col-md-4 col-sm-6 logo design">
-                            <a href="single-project.html" class="portfolio_item">
-                                <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                                <div class="portfolio_item_hover">
-                                    <div class="portfolio-border clearfix">
-                                        <div class="item_info">
-                                            <span>Uppercase</span>
-                                            <em>Web Development / Design / Logo</em>
+                                            <em>Web Development / Web Design / Logo</em>
                                         </div>
                                     </div>
                                 </div>
@@ -198,12 +184,28 @@
                         <!-- single work -->
                         <div class="col-md-4 col-sm-12 development design">
                             <a href="single-project.html" class="portfolio_item">
-                                <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                                <img src="images/oddjobs.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
                                         <div class="item_info">
-                                            <span>Photorealistic smartwatch</span>
-                                            <em>Photography</em>
+                                            <span>Oddjobs</span>
+                                            <em>Web Development / Web Design / Logo</em>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <!-- end single work -->
+
+                        <!-- single work -->
+                        <div class="col-md-4 col-sm-6 logo">
+                            <a href="single-project.html" class="portfolio_item">
+                                <img src="images/vancitydesign.svg" alt="image" class="img-responsive" />
+                                <div class="portfolio_item_hover">
+                                    <div class="portfolio-border clearfix">
+                                        <div class="item_info">
+                                            <span>Vancity Design</span>
+                                            <em>Logo</em>
                                         </div>
                                     </div>
                                 </div>
@@ -214,12 +216,12 @@
                         <!-- single work -->
                         <div class="col-md-4 col-sm-6 logo branding">
                             <a href="single-project.html" class="portfolio_item">
-                                <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                                <img src="images/ppacyoungadults.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
                                         <div class="item_info">
-                                            <span>Held by hands</span>
-                                            <em>Fashion / Ads</em>
+                                            <span>Peace Portal Young Adults</span>
+                                            <em>Logo / Branding</em>
                                         </div>
                                     </div>
                                 </div>
@@ -228,78 +230,14 @@
                         <!-- end single work -->
 
                         <!-- single work -->
-                        <div class="col-md-4 col-sm-6 development">
+                        <div class="col-md-4 col-sm-6 logo design development branding">
                             <a href="single-project.html" class="portfolio_item">
-                                <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
+                                <img src="images/uppercase.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
                                         <div class="item_info">
-                                            <span>Mobile devices</span>
-                                            <em>Graphics / Ads</em>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <!-- end single work -->
-
-                        <!-- single work -->
-                        <div class="col-md-4 col-sm-12 branding">
-                            <a href="single-project.html" class="portfolio_item">
-                                <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                                <div class="portfolio_item_hover">
-                                    <div class="portfolio-border clearfix">
-                                        <div class="item_info">
-                                            <span>Photorealistic smartwatch</span>
-                                            <em>Photography</em>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <!-- end single work -->
-
-                        <!-- single work -->
-                        <div class="col-md-4 col-sm-6 graphics ads">
-                            <a href="single-project.html" class="portfolio_item">
-                                <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                                <div class="portfolio_item_hover">
-                                    <div class="portfolio-border clearfix">
-                                        <div class="item_info">
-                                            <span>Mobile devices</span>
-                                            <em>Graphics / Ads</em>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <!-- end single work -->
-
-                        <!-- single work -->
-                        <div class="col-md-4 col-sm-6 graphics ads">
-                            <a href="single-project.html" class="portfolio_item">
-                                <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                                <div class="portfolio_item_hover">
-                                    <div class="portfolio-border clearfix">
-                                        <div class="item_info">
-                                            <span>Mobile devices</span>
-                                            <em>Graphics / Ads</em>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <!-- end single work -->
-
-                        <!-- single work -->
-                        <div class="col-md-4 col-sm-6 graphics ads">
-                            <a href="single-project.html" class="portfolio_item">
-                                <img src="http://placehold.it/1000x1000" alt="image" class="img-responsive" />
-                                <div class="portfolio_item_hover">
-                                    <div class="portfolio-border clearfix">
-                                        <div class="item_info">
-                                            <span>Mobile devices</span>
-                                            <em>Graphics / Ads</em>
+                                            <span>Uppercase</span>
+                                            <em>Web Development / Web Design / Logo</em>
                                         </div>
                                     </div>
                                 </div>
@@ -320,21 +258,21 @@
 
     <!-- contact -->
     <section class="contact" id="contact">
-      <h1 id="contactTitle" class="text-center">let's connect</h1>
+      <h1 class="contact-title">Let's connect</h1>
       <form name="sentMessage" id="contactForm" method="POST">
         <div class="container">
-          <div class="col-md-6 left_input">
+          <div class="left_input">
             <div class="form-group">
-              <input name="name" placeholder="Your Name" class="form-control" type="text" id="name" required>
+              <input name="name" placeholder="Name" class="form-control" type="text" id="name" required>
             </div>
           </div>
-          <div class="col-md-6 right_input">
+          <div class="right_input">
             <div class="form-group">
-              <input name="_replyto" placeholder=" Your Email" class="form-control" type="text" id="email" required>
+              <input name="_replyto" placeholder="Email" class="form-control" type="text" id="email" required>
             </div>
           </div>
           <div class="form-group">
-            <textarea class="form-control" name="message" placeholder="Your Message" id="message" required></textarea>
+            <textarea class="form-control" name="message" placeholder="Message" id="message" required></textarea>
           </div>
           <input type="text" name="_gotcha" style="display:none">
           <input type="hidden" name="_subject" value="New Contact Message!">
@@ -344,7 +282,7 @@
         <div class="clearfix"></div>
         <div class="text-center">
           <!-- <button id="contact_button" class="btn btn-xl">submit</button> -->
-          <input type="submit" value="Submit" class="btn btn-xl" id="contact_button">
+          <input type="submit" value="Submit" class="btn btn-xl" id="contact-button">
         </div>
       </form>
       <script type="text/javascript">
