--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                 <span class="sr-only">Toggle navigation</span>
                 <span><i class="ion-navicon"></i></span>
               </button>
-              <a class="cd-top logo-collapsed" href="#"><img src="images/logo-white.svg"></a>
+              <a class="cd-top logo-collapsed" href="#"><img src="images/logo-black.svg"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a class="links" href="#about">About</a></li>
                 <li><a class="links" href="#services">Services</a></li>
+                <li><a class="links" href="#about">About</a></li>
                 <li><a class="navbar-brand cd-top logo-nav white-logo" href="#"></a><li>
                 <li><a class="links" href="#portfolio">Work</a></li>
                 <li><a class="links" href="#contact">Contact</a></li>
@@ -77,6 +77,36 @@
     </section>
     <!-- end hero -->
 
+    <!-- services -->
+    <section class="services" id="services">
+      <div class="table-cell">
+        <div class="container">
+          <div class="services-title">
+            <h4>services</h4>
+            <h1>What I bring to the table.</h1>
+            <!-- <hr /> -->
+          </div>
+          <div class="col-md-4">
+            <i class="ion-edit"></i>
+            <h2>branding.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="col-md-4">
+            <i class="ion-paintbrush"></i>
+            <h2>design.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <div class="col-md-4">
+            <i class="ion-laptop"></i>
+            <h2>development.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+        </div>
+        <a class="services-arrow" href="#about"><i class="ion-arrow-down-c"></i></a>
+      </div>
+    </section>
+    <!-- end sevices -->
+
     <!-- about -->
     <section class="about" id="about">
       <div class="table-cell">
@@ -84,7 +114,8 @@
           <div class="about-title col-md-6">
             <h4>about</h4>
             <h1>A little<br>about<br>myself.</h1><br>
-            <hr />
+            <img class="img-circle kenan" src="images/kenan.jpg">
+            <!-- <hr /> -->
           </div>
           <div class="col-md-6">
             <div class="row">
@@ -107,40 +138,10 @@
             </div>
           </div>
         </div>
-        <a class="about-arrow" href="#services"><i class="ion-arrow-down-c"></i></a>
+        <a class="about-arrow" href="#portfolio"><i class="ion-arrow-down-c"></i></a>
       </div>
     </section>
     <!-- end about -->
-
-    <!-- services -->
-    <section class="services" id="services">
-      <div class="table-cell">
-        <div class="container">
-          <div class="services-title">
-            <h4>services</h4>
-            <h1>What I bring to the table.</h1>
-            <hr />
-          </div>
-          <div class="col-md-4">
-            <i class="ion-edit"></i>
-            <h2>branding.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <div class="col-md-4">
-            <i class="ion-paintbrush"></i>
-            <h2>design.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <div class="col-md-4">
-            <i class="ion-laptop"></i>
-            <h2>development.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-        </div>
-        <a class="services-arrow" href="#portfolio"><i class="ion-arrow-down-c"></i></a>
-      </div>
-    </section>
-    <!-- end sevices -->
 
     <!-- portfolio -->
       <!-- main container -->
@@ -258,37 +259,40 @@
 
     <!-- contact -->
     <section class="contact" id="contact">
-      <h1 class="contact-title">Let's connect</h1>
-      <form name="sentMessage" id="contactForm" method="POST">
-        <div class="container">
-          <div class="left_input">
-            <div class="form-group">
-              <input name="name" placeholder="Name" class="form-control" type="text" id="name" required>
+      <div class="table-cell">
+        <h4>contact</h4>
+        <h1 class="contact-title">Let's connect.</h1>
+        <form name="sentMessage" id="contactForm" method="POST">
+          <div class="container">
+            <div class="left_input">
+              <div class="form-group">
+                <input name="name" placeholder="Name" class="form-control" type="text" id="name" required>
+              </div>
             </div>
-          </div>
-          <div class="right_input">
-            <div class="form-group">
-              <input name="_replyto" placeholder="Email" class="form-control" type="text" id="email" required>
+            <div class="right_input">
+              <div class="form-group">
+                <input name="_replyto" placeholder="Email" class="form-control" type="text" id="email" required>
+              </div>
             </div>
+            <div class="form-group">
+              <textarea class="form-control" name="message" placeholder="Message" id="message" required></textarea>
+            </div>
+            <input type="text" name="_gotcha" style="display:none">
+            <input type="hidden" name="_subject" value="New Contact Message!">
+            <input type="hidden" name="_next" value="http://keyphlip.github.io/thanks.html">
           </div>
-          <div class="form-group">
-            <textarea class="form-control" name="message" placeholder="Message" id="message" required></textarea>
+        <!-- Button -->
+          <div class="clearfix"></div>
+          <div class="text-center">
+            <!-- <button id="contact_button" class="btn btn-xl">submit</button> -->
+            <input type="submit" value="Submit" class="btn btn-xl" id="contact-button">
           </div>
-          <input type="text" name="_gotcha" style="display:none">
-          <input type="hidden" name="_subject" value="New Contact Message!">
-          <input type="hidden" name="_next" value="http://keyphlip.github.io/thanks.html">
-        </div>
-      <!-- Button -->
-        <div class="clearfix"></div>
-        <div class="text-center">
-          <!-- <button id="contact_button" class="btn btn-xl">submit</button> -->
-          <input type="submit" value="Submit" class="btn btn-xl" id="contact-button">
-        </div>
-      </form>
-      <script type="text/javascript">
-        var contactform =  document.getElementById('contact_form');
-        contactform.setAttribute('action', '//formspree.io/' + 'philipskenan' + '@' + 'gmail' + '.' + 'com');
-      </script>
+        </form>
+        <script type="text/javascript">
+          var contactform =  document.getElementById('contact_form');
+          contactform.setAttribute('action', '//formspree.io/' + 'philipskenan' + '@' + 'gmail' + '.' + 'com');
+        </script>
+      </div>
     </section>
     <!-- end contact -->
 
