updated about me

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="row">
               <div class="about-text">
                 <h2>who i am</h2>
-                <p>I'm a web / graphic designer with a background in web development, residing in wonderful Vancouver, BC.</p>
+                <p>I'm a web / graphic designer with a background in web development, residing in artsy Port Moody, BC.</p>
               </div>
             </div>
             <div class="row">
@@ -168,7 +168,7 @@
                     <div class="no-padding portfolio_container clearfix">
                         <!-- single work -->
                         <div class="col-md-4 col-sm-6 development logo design">
-                            <a href="single-project.html" class="portfolio_item">
+                            <a href="blog.html" class="portfolio_item">
                                 <img src="images/blog.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
@@ -184,7 +184,7 @@
 
                         <!-- single work -->
                         <div class="col-md-4 col-sm-12 development design">
-                            <a href="single-project.html" class="portfolio_item">
+                            <a href="oddjobs.html" class="portfolio_item">
                                 <img src="images/oddjobs.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
@@ -200,7 +200,7 @@
 
                         <!-- single work -->
                         <div class="col-md-4 col-sm-6 logo">
-                            <a href="single-project.html" class="portfolio_item">
+                            <a href="vancitydesign.html" class="portfolio_item">
                                 <img src="images/vancitydesign.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
@@ -216,7 +216,7 @@
 
                         <!-- single work -->
                         <div class="col-md-4 col-sm-6 logo branding">
-                            <a href="single-project.html" class="portfolio_item">
+                            <a href="ppacyoungadults.html" class="portfolio_item">
                                 <img src="images/ppacyoungadults.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
@@ -232,7 +232,7 @@
 
                         <!-- single work -->
                         <div class="col-md-4 col-sm-6 logo design development branding">
-                            <a href="single-project.html" class="portfolio_item">
+                            <a href="uppercase.html" class="portfolio_item">
                                 <img src="images/uppercase.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
