updated blog project

--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,7 @@
 
     <!-- main css -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/blog.css" rel="stylesheet">
 
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
@@ -34,7 +35,6 @@
     <!-- end Preloader -->
 
     <div class="container-fluid">
-
         <!-- nav -->
         <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
           <div class="container-fluid">
@@ -52,7 +52,7 @@
               <ul class="nav navbar-nav">
                 <li><a class="links" href="http://keyphlip.github.io#services">Services</a></li>
                 <li><a class="links" href="http://keyphlip.github.io#about">About</a></li>
-                <li><a class="navbar-brand cd-top logo-nav white-logo" href="http://keyphlip.github.io"></a><li>
+                <li><a class="navbar-brand logo-nav white-logo" href="http://keyphlip.github.io"></a><li>
                 <li><a class="links" href="http://keyphlip.github.io#portfolio">Work</a></li>
                 <li><a class="links" href="http://keyphlip.github.io#contact">Contact</a></li>
                 </li>
@@ -61,7 +61,53 @@
           </div><!-- /.container-fluid -->
         </nav>
         <!-- end nav -->
-
     </div>
+
+    <!-- main-container -->
+    <div class="project-title">
+      <h1>blog</h1>
+    </div>
+    <div class="container main-container">
+      <div class="col-md-12">
+          <img src="images/blog1.png" alt="" class="img-responsive blog-logo" />
+          <div class="h-30"></div>
+      </div>
+
+      <div class="col-md-12">
+          <h2 class="text-uppercase">blog</h2>
+          <h5 class="color">Web Development / Web Design</h5>
+          <div class="h-30"></div>
+      </div>
+
+      <div class="col-md-9">
+          <p>This is one of my first projects as a developer that I built on throughout my time at school learning Ruby on Rails. The website is built completely on Rails and can act as a functional blog. Although this site is not yet responsive due to other priorities, it's still something I'm proud of design-wise. The site very modern and clean and it definitely captures my design-style perfectly. I decided to brand it simply as BLOG to go along with the minimalist look.</p><br>
+          <a class="site-link" href="http://kenanphilips-blog.herokuapp.com" target="_blank">Check it out here</a>
+      </div>
+
+      <div class="col-md-3">
+          <ul class="cat-ul">
+              <h4>tools used</h4>
+              <li><i class="ion-android-radio-button-off"></i> Ruby on Rails</li>
+              <li><i class="ion-android-radio-button-off"></i> HTML</li>
+              <li><i class="ion-android-radio-button-off"></i> SCSS</li>
+              <li><i class="ion-android-radio-button-off"></i> jQuery</li>
+              <li><i class="ion-android-radio-button-off"></i> PostgreSQL</li>
+              <li><i class="ion-android-radio-button-off"></i> Git</li>
+          </ul>
+          <div class="h-10"></div>
+      </div>
+    </div>
+    <!-- end main-container -->
+
+    <!-- jQuery -->
+    <script src="js/jquery-2.1.1.js"></script>
+    <!--  plugins -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
+
+    <!-- custom script -->
+    <script src="js/main.js"></script>
   </body>
 </html>
