--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="row">
               <div class="about-text">
                 <h2>who i am</h2>
-                <p>I'm a web / graphic designer with a background in web development, residing in artsy Port Moody, BC.</p>
+                <p>I'm a web & graphic designer with a background in web development, residing in the artsy community of Port Moody, BC.</p>
               </div>
             </div>
             <div class="row">
@@ -167,14 +167,14 @@
                     <!-- portfolio_container -->
                     <div class="no-padding portfolio_container clearfix">
                         <!-- single work -->
-                        <div class="col-md-4 col-sm-6 development logo design">
+                        <div class="col-md-4 col-sm-6 development design">
                             <a href="blog.html" class="portfolio_item">
                                 <img src="images/blog.svg" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
                                         <div class="item_info">
                                             <span>Blog</span>
-                                            <em>Web Development / Web Design / Logo</em>
+                                            <em>Web Development / Web Design</em>
                                         </div>
                                     </div>
                                 </div>
@@ -191,22 +191,6 @@
                                         <div class="item_info">
                                             <span>Oddjobs</span>
                                             <em>Web Development / Web Design / Logo</em>
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <!-- end single work -->
-
-                        <!-- single work -->
-                        <div class="col-md-4 col-sm-6 logo">
-                            <a href="vancitydesign.html" class="portfolio_item">
-                                <img src="images/vancitydesign.svg" alt="image" class="img-responsive" />
-                                <div class="portfolio_item_hover">
-                                    <div class="portfolio-border clearfix">
-                                        <div class="item_info">
-                                            <span>Vancity Design</span>
-                                            <em>Logo</em>
                                         </div>
                                     </div>
                                 </div>
