--- a/ppacyoungadults.html
+++ b/ppacyoungadults.html
@@ -13,6 +13,7 @@
 
     <!-- main css -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/project.css" rel="stylesheet">
 
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
@@ -22,6 +23,104 @@
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="pre-container">
+            <div class="spinner">
+                <div class="double-bounce1"></div>
+                <div class="double-bounce2"></div>
+            </div>
+        </div>
+    </div>
+    <!-- end Preloader -->
 
+    <div class="project-title">
+      <h1>blog</h1>
+    </div>
+
+    <div class="container-fluid">
+        <!-- nav -->
+        <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span><i class="ion-navicon"></i></span>
+              </button>
+              <a class="cd-top logo-collapsed" href="#"><img src="images/logo-black.svg"></a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a class="links" href="http://kenanphilips.com#services">Services</a></li>
+                <li><a class="links" href="http://kenanphilips.com#about">About</a></li>
+                <li><a class="navbar-brand logo-nav white-logo" href="http://kenanphilips.com"></a><li>
+                <li><a class="links" href="http://kenanphilips.com#portfolio">Work</a></li>
+                <li><a class="links" href="http://kenanphilips.com#contact">Contact</a></li>
+                </li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+        <!-- end nav -->
+    </div>
+
+    <!-- main-container -->
+    <div class="container main-container">
+
+      <div class="col-md-12">
+          <h2 class="text-uppercase">blog</h2>
+          <h5 >Web Development / Web Design</h5>
+          <div class="h-10"></div>
+      </div>
+
+      <div class="col-md-9">
+          <p class="project-desc">This is one of my first projects as a developer that I built on throughout my time at school learning Ruby on Rails. The website is built completely on Rails and can act as a functional blog. Although this site is not yet responsive due to other priorities, it's still something I'm proud of design-wise. The site very modern and clean and it definitely captures my design-style perfectly. I decided to brand it simply as BLOG to go along with the minimalist look.</p><br>
+          <a class="site-link" href="http://kenanphilips-blog.herokuapp.com" target="_blank">Check it out here</a>
+      </div>
+
+      <div class="col-md-3">
+          <ul class="cat-ul">
+              <h4>tools used</h4>
+              <li><i class="ion-android-radio-button-off"></i> Ruby on Rails</li>
+              <li><i class="ion-android-radio-button-off"></i> HTML</li>
+              <li><i class="ion-android-radio-button-off"></i> SCSS</li>
+              <li><i class="ion-android-radio-button-off"></i> jQuery</li>
+              <li><i class="ion-android-radio-button-off"></i> PostgreSQL</li>
+              <li><i class="ion-android-radio-button-off"></i> Git</li>
+          </ul>
+          <div class="h-10"></div>
+      </div>
+
+      <div class="col-md-12 feature">
+        <img src="images/blog1.png" alt="" class="img-responsive blog-logo" />
+      </div>
+    </div>
+    <!-- end main-container -->
+
+    <!-- footer -->
+    <section class="footer">
+      <a class="email" href="mailto:philipskenan@gmail.com">philipskenan@gmail.com</a>
+      <ul class="social-media">
+        <a href="http://twitter.com/keyphlip"><li><i class="ion-social-twitter"></i></li></a>
+        <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
+        <a href="http://dribbble.com/keyphlip"><li><i class="ion-social-dribbble"></i></li></a>
+        <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
+      </ul>
+    </section>
+    <!-- end footer -->
+
+    <!-- jQuery -->
+    <script src="js/jquery-2.1.1.js"></script>
+    <!--  plugins -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
+
+    <!-- custom script -->
+    <script src="js/main.js"></script>
   </body>
 </html>
