--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 
     <!-- main css -->
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/blog.css" rel="stylesheet">
+    <link href="css/project.css" rel="stylesheet">
 
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
@@ -50,11 +50,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a class="links" href="http://keyphlip.github.io#services">Services</a></li>
-                <li><a class="links" href="http://keyphlip.github.io#about">About</a></li>
-                <li><a class="navbar-brand logo-nav white-logo" href="http://keyphlip.github.io"></a><li>
-                <li><a class="links" href="http://keyphlip.github.io#portfolio">Work</a></li>
-                <li><a class="links" href="http://keyphlip.github.io#contact">Contact</a></li>
+                <li><a class="links" href="http://kenanphilips.com#services">Services</a></li>
+                <li><a class="links" href="http://kenanphilips.com#about">About</a></li>
+                <li><a class="navbar-brand logo-nav white-logo" href="http://kenanphilips.com"></a><li>
+                <li><a class="links" href="http://kenanphilips.com#portfolio">Work</a></li>
+                <li><a class="links" href="http://kenanphilips.com#contact">Contact</a></li>
                 </li>
               </ul>
             </div><!-- /.navbar-collapse -->
@@ -63,24 +63,25 @@
         <!-- end nav -->
     </div>
 
-    <!-- main-container -->
     <div class="project-title">
       <h1>blog</h1>
     </div>
+
+    <!-- main-container -->
     <div class="container main-container">
-      <div class="col-md-12">
-          <img src="images/blog1.png" alt="" class="img-responsive blog-logo" />
-          <div class="h-30"></div>
+      <div class="col-md-12 feature">
+        <img src="images/blog1.png" alt="" class="img-responsive blog-logo" />
+        <div class="h-30"></div>
       </div>
 
       <div class="col-md-12">
           <h2 class="text-uppercase">blog</h2>
-          <h5 class="color">Web Development / Web Design</h5>
-          <div class="h-30"></div>
+          <h5 >Web Development / Web Design</h5>
+          <div class="h-10"></div>
       </div>
 
       <div class="col-md-9">
-          <p>This is one of my first projects as a developer that I built on throughout my time at school learning Ruby on Rails. The website is built completely on Rails and can act as a functional blog. Although this site is not yet responsive due to other priorities, it's still something I'm proud of design-wise. The site very modern and clean and it definitely captures my design-style perfectly. I decided to brand it simply as BLOG to go along with the minimalist look.</p><br>
+          <p class="project-desc">This is one of my first projects as a developer that I built on throughout my time at school learning Ruby on Rails. The website is built completely on Rails and can act as a functional blog. Although this site is not yet responsive due to other priorities, it's still something I'm proud of design-wise. The site very modern and clean and it definitely captures my design-style perfectly. I decided to brand it simply as BLOG to go along with the minimalist look.</p><br>
           <a class="site-link" href="http://kenanphilips-blog.herokuapp.com" target="_blank">Check it out here</a>
       </div>
 
@@ -98,6 +99,18 @@
       </div>
     </div>
     <!-- end main-container -->
+
+    <!-- footer -->
+    <section class="footer">
+      <a class="email" href="mailto:philipskenan@gmail.com">philipskenan@gmail.com</a>
+      <ul class="social-media">
+        <a href="http://twitter.com/keyphlip"><li><i class="ion-social-twitter"></i></li></a>
+        <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
+        <a href="http://dribbble.com/keyphlip"><li><i class="ion-social-dribbble"></i></li></a>
+        <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
+      </ul>
+    </section>
+    <!-- end footer -->
 
     <!-- jQuery -->
     <script src="js/jquery-2.1.1.js"></script>
