--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     </div>
     <!-- end Preloader -->
 
-    <section class="home-page">
+    <section class="about-page">
 
       <div class="container">
 
@@ -50,11 +50,10 @@
               <a class="cd-top logo-collapsed" href="#"><img src="images/logo-black.svg"></a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
                 <li><a class="links" href="http://kenanphilips.com/">work</a></li>
-                <li><a class="navbar-brand cd-top logo-nav white-logo" href="#"></a><li>
+                <li><a class="navbar-brand cd-top logo-nav" href="#"></a><li>
                 <li><a class="links" href="http://kenanphilips.com/about">about</a></li>
                 <!-- <li><a class="links" href="#contact">Let's Talk</a></li> -->
                 </li>
@@ -64,84 +63,33 @@
         </nav>
         <!-- end nav -->
 
-        <div class="hero">
-          <div class="table-cell">
-              <h1 class="title-text"><span class="type"></span></h1>
-              <h5>Hi there, my name is <b>kenan philips</b></h5>
-              <ul class="social-media">
-                <a href="http://twitter.com/keyphlip"><li><i class="ion-social-twitter"></i></li></a>
-                <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
-                <a href="http://dribbble.com/keyphlip"><li><i class="ion-social-dribbble"></i></li></a>
-                <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
-              </ul>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="projects container-fluid">
-        <div class="row">
-          <a href="#" class="project col-xs-12 col-sm-6" style="background-image: url(images/oddjobs-background.jpg);">
-            <div class="overlay">
-              <img src="images/oddjobs.svg">
-            </div>
-          </a>
-          <a href="#" class="project col-xs-12 col-sm-6" style="background-image: url(images/uppercase-background.jpg);">
-            <div class="overlay">
-              <img src="images/uppercase.svg">
-            </div>
-          </a>
-          <a href="#" class="project col-xs-12 col-sm-6" style="background-image: url(images/ppac-background.jpg);">
-            <div class="overlay">
-              <img src="images/ppacyoungadults.svg">
-            </div>
-          </a>
-          <a href="#" class="project col-xs-12 col-sm-6" style="background-image: url(images/blog-background.jpg);">
-            <div class="overlay">
-              <img src="images/blog.svg">
-            </div>
-          </a>
-        </div>
-      </div>
-
-    </section>
-
-    <!-- services -->
-    <section class="services" id="services">
-      <div class="table-cell">
-        <div class="container">
+        <!-- services -->
+        <section class="services" id="services">
           <div class="services-title">
-            <h4>services</h4>
             <h1>What I bring to the table.</h1>
             <!-- <hr /> -->
           </div>
           <div class="col-md-4">
-            <i class="ion-edit"></i>
-            <h2>branding.</h2>
+            <span>A</span>
+            <h2>ui / ux</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <div class="col-md-4">
             <i class="ion-paintbrush"></i>
-            <h2>design.</h2>
+            <h2>design</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <div class="col-md-4">
             <i class="ion-laptop"></i>
-            <h2>development.</h2>
+            <h2>development</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-        </div>
-        <a class="services-arrow" href="#about"><i class="ion-arrow-down-c"></i></a>
-      </div>
-    </section>
-    <!-- end sevices -->
+        </section>
+        <!-- end sevices -->
 
-    <!-- about -->
-    <section class="about" id="about">
-      <div class="table-cell">
-        <div class="container">
+        <!-- about -->
+        <section class="about" id="about">
           <div class="about-title col-md-6">
-            <h4>about</h4>
             <h1>A little<br>about<br>myself.</h1><br>
             <img class="img-circle kenan" src="images/kenan.jpg">
             <!-- <hr /> -->
@@ -166,50 +114,47 @@
               </div>
             </div>
           </div>
-        </div>
-        <a class="about-arrow" href="#portfolio"><i class="ion-arrow-down-c"></i></a>
-      </div>
-    </section>
-    <!-- end about -->
+        </section>
+        <!-- end about -->
 
-    <!-- contact -->
-    <section class="contact" id="contact">
-      <div class="table-cell">
-        <h4>contact</h4>
-        <h1 class="contact-title">Let's connect.</h1>
-        <form name="sentMessage" id="contactForm" method="POST">
-          <div class="container">
-            <div class="left_input">
-              <div class="form-group">
-                <input name="name" placeholder="Name" class="form-control" type="text" id="name" required>
+        <!-- contact -->
+        <section class="contact" id="contact">
+            <h4>contact</h4>
+            <h1 class="contact-title">Let's connect.</h1>
+            <form name="sentMessage" id="contactForm" method="POST">
+                <div class="left_input">
+                  <div class="form-group">
+                    <input name="name" placeholder="Name" class="form-control" type="text" id="name" required>
+                  </div>
+                </div>
+                <div class="right_input">
+                  <div class="form-group">
+                    <input name="_replyto" placeholder="Email" class="form-control" type="text" id="email" required>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" name="message" placeholder="Message" id="message" required></textarea>
+                </div>
+                <input type="text" name="_gotcha" style="display:none">
+                <input type="hidden" name="_subject" value="New Contact Message!">
+                <input type="hidden" name="_next" value="#">
+            <!-- Button -->
+              <div class="clearfix"></div>
+              <div class="text-center">
+                <!-- <button id="contact_button" class="btn btn-xl">submit</button> -->
+                <input type="submit" value="Submit" class="btn btn-xl" id="contact-button">
               </div>
-            </div>
-            <div class="right_input">
-              <div class="form-group">
-                <input name="_replyto" placeholder="Email" class="form-control" type="text" id="email" required>
-              </div>
-            </div>
-            <div class="form-group">
-              <textarea class="form-control" name="message" placeholder="Message" id="message" required></textarea>
-            </div>
-            <input type="text" name="_gotcha" style="display:none">
-            <input type="hidden" name="_subject" value="New Contact Message!">
-            <input type="hidden" name="_next" value="http://keyphlip.github.io/thanks.html">
-          </div>
-        <!-- Button -->
-          <div class="clearfix"></div>
-          <div class="text-center">
-            <!-- <button id="contact_button" class="btn btn-xl">submit</button> -->
-            <input type="submit" value="Submit" class="btn btn-xl" id="contact-button">
-          </div>
-        </form>
-        <script type="text/javascript">
-          var contactform =  document.getElementById('contact_form');
-          contactform.setAttribute('action', '//formspree.io/' + 'philipskenan' + '@' + 'gmail' + '.' + 'com');
-        </script>
+            </form>
+            <script type="text/javascript">
+              var contactform =  document.getElementById('contactForm');
+              contactform.setAttribute('action', '//formspree.io/' + 'philipskenan' + '@' + 'gmail' + '.' + 'com');
+            </script>
+        </section>
+        <!-- end contact -->
+
       </div>
+
     </section>
-    <!-- end contact -->
 
     <!-- footer -->
     <section class="footer">
