--- a/404.html
+++ b/404.html
@@ -7,6 +7,8 @@
     <title>Uh Oh - Kenan Philips</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
+    <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
+
     <link href="css/style.css" rel="stylesheet">
 
     <!-- typekit font -->
@@ -20,7 +22,13 @@
         <div class="container">
           <h1>uh oh!</h1>
           <h2>this site is under construction</h2>
-          <a href="mailto:philipskenan@gmail.com">philipskenan@gmail.com</a>
+          <a class="email" href="mailto:philipskenan@gmail.com">philipskenan@gmail.com</a>
+          <ul class="social-media">
+            <a href="http://twitter.com/kenanphilips"><li><i class="ion-social-twitter"></i></li></a>
+            <a href="http://linkedin.com/in/kenanphilips"><li><i class="ion-social-linkedin"></i></li></a>
+            <a href="http://dribbble.com/kenanphilips"><li><i class="ion-social-dribbble"></i></li></a>
+            <a href="mailto:philipskenan@gmail.com"><li><i class="ion-email"></i></li></a>
+          </ul>
         </div>
       </div>
     </div>
